# Request_coalescing_rust

./: Cargo.toml  README.MD  build.rs  docker-compose.yml
proto/: new.proto
src/: grpc_json.rs  lib.rs  main.rs
