[package]
name = "request_coalescing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tokio = {version = "1", features = ["full"]}
url = "2.4.0"
tonic = "0.9.2"
num_cpus = "1.16.0"
async-trait = "0.1.68"
prost = "0.11.9"
rand = "0.8"
futures = "0.3"
scylla = "0.8.2"
serde = {version = "1.0.175", features=["derive"]}
serde_json = "1.0.103"

[build-dependencies]
tonic-build = "0.9.2"